--- a/src/app.css
+++ b/src/app.css
@@ -3,7 +3,9 @@
 @tailwind utilities;
 
 body{
-    font-family: "Helvetica Neue LT Std", "helvetica", sans-serif;
+    font-family: "elza", sans-serif;
+    font-weight: 400;
+    font-style: normal;
     transition-property: all;
     transition-timing-function: cubic-bezier(.5,0,0,1);
     transition-duration: 500ms;
@@ -71,13 +73,10 @@ body::-webkit-scrollbar {
 
 
 a{
-    transition: color 600ms;
     cursor: pointer;
 }
 
-a:hover{
-    color:black;
-}
+
 
 button{
     transition: background-color 600ms;
@@ -85,103 +84,94 @@ button{
 }
 
 h1{
-    font-size: 66px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 80px; /* 121.212% */
+font-size: 150px;
+font-style: normal;
+font-weight: 400;
+line-height: 150px; /* 100% */
 }
 
 h2{
-    font-size: 50px;
-    font-weight: 700;
-    line-height: 64px; /* 128% */
+    font-size: 60px;
+font-style: normal;
+font-weight: 400;
+line-height: 80px;
 }
 
 h3{
-    font-size: 38px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 48px; 
+    font-size: 30px;
+font-style: normal;
+font-weight: 400;
+line-height: 115%; /* 34.5px */
+letter-spacing: 1px;
 }
 
 h4{
-    font-size: 28px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 38px; /* 135.714% */
+    font-size: 16px;
+font-style: normal;
+font-weight: 500;
+line-height: 24px; /* 150% */
+letter-spacing: 2px;
+text-transform: uppercase;
 }
 
 h5{
-   font-size: 1.5rem; 
-   line-height: 1.5em;
-}
-
-h6{
-    font-size: 14px;
+    font-size: 12px;
     font-style: normal;
-    font-weight: 700;
-    line-height: 24px; /* 171.429% */
+    font-weight: 600;
+    line-height: 24px; /* 200% */
     letter-spacing: 1px;
     text-transform: uppercase;
 }
 
-p{
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 24px; /* 150% */
+h6, .label{
+    font-size: 12px;
+font-style: normal;
+font-weight: 400;
+line-height: 18px; /* 150% */
+letter-spacing: 1px;
+text-transform: uppercase;
 }
 
-.label{
-    font-family: "helvetica";
-    font-size: 12px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 18px; /* 150% */
+p{
+    font-family: 'Lora', serif;
+    font-weight: 300;
+    font-size: 16px;
+    line-height:1.5em;
 }
+
 
 button{
     cursor: pointer;
-}
-
-a{
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 400;
-    line-height:1em;
-    color:#424B5A;
 }
 
 @media only screen and (max-width:786px) {
     h1{
         font-size: 36px;
     font-style: normal;
-    font-weight: 700;
+
     line-height: 44px; /* 121.212% */
     }
     
     h2{
         font-size: 32px;
         font-style: normal;
-        font-weight: 700;
+ 
         line-height: 42px;
     }
     
     h3{
         font-size: 28px;
     font-style: normal;
-    font-weight: 700;
+
     line-height: 40px;
     }
     
     h4{
-        font-size: 2rem;
-        line-height: 1.4em;
+        
     }
     
     h5{
-       font-size: 1.5rem; 
-       line-height: 1.5em;
+       
     }
     
     
@@ -194,13 +184,7 @@ a{
     
 
     
-    a{
-        font-size: 14px;
-        font-style: normal;
-        font-weight: 400;
-        line-height: normal;
-        margin: 0px 0px 8.5px 0px;
-}
+
 }
 
 /* svelte-select stylings*/
