--- a/src/app.css
+++ b/src/app.css
@@ -77,6 +77,13 @@ a{
     cursor: pointer;
 }
 
+footer p{
+    font-family: "elza", sans-serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.5em;
+}
 
 
 button{
